@@ -1,5 +1,10 @@
 2015-01-15  Ola Jeppsson  <ola@adapteva.com>
 
+	* src/e-utils/e-write/src/e-write.c (int main): Call
+	e_reset_system() before writing to Epiphany chip.
+
+2015-01-15  Ola Jeppsson  <ola@adapteva.com>
+
 	* src/e-utils/e-loader/src/e-loader.c (int main): Always call
 	'e_reset_system()'. Make reset flags no-ops. Do not call
 	'e_finalize()'.
